--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,9 @@
 html {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
-*,
-*:before,
-*:after {
+
+*,*:before,*:after {	
 	box-sizing: inherit;
 	margin: 0;
 	padding: 0;
@@ -33,7 +32,7 @@ html {
 
 
 
-input{
+input{	
 	width: 100%;
 	height: 40px;
 	margin: 10px 0px;
@@ -42,7 +41,8 @@ input{
 	border-radius: 10px;
 }
 
-.boton{
+
+.boton{	
 	font-size: 25px;
 	display: inline-block;
 	width: 200px;
@@ -51,4 +51,20 @@ input{
 	padding: 5px;
 	text-decoration: none;
 	margin-top: 20px;
+}
+
+
+.col{	
+	display: inline-block;
+	float: left;
+}
+
+
+.col-3{
+	width: 30%;
+}
+
+
+.col-7{
+	width: 70%;
 }
